# tank

install/: local_setup.sh  setup.sh
install/tank_bringup/share/tank_bringup/: local_setup.sh  package.sh  package.xml
install/tank_bringup/share/tank_bringup/config/: controller.yaml
install/tank_bringup/share/tank_bringup/launch/: controller.launch  controller.launch.py  controller.launch.xml  display.launch.py  display.launch.xml  display2.launch  display2.launch.xml  gazebo.launch  gazebo.launch.py  gazebo.launch.xml
install/tank_description/share/tank_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/tank_description/share/tank_description/meshes/: Wheel1_1.stl  Wheel2_1.stl  base_link.stl
install/tank_description/share/tank_description/rviz/: display.rviz
install/tank_description/share/tank_description/urdf/: SlamBot_urdf.trans  SlamBot_urdf.xacro  materials.xacro  slambot.sdf  slambot_urdf.gazebo  slambot_urdf.trans  slambot_urdf.xacro  tank.urdf  world.urdf
install/tank_description/share/urdf/: tank.urdf
install/tank_interfaces/share/tank_interfaces/: local_setup.sh  package.sh  package.xml
install/tank_interfaces/share/tank_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  export_tank_interfaces__rosidl_generator_cExport.cmake  export_tank_interfaces__rosidl_generator_cppExport.cmake  (+4 more)
log/: latest_build
src/tank_bringup/: CMakeLists.txt
src/tank_description/: CMakeLists.txt  package.xml
src/tank_description/rviz/: urdf_config.rviz
src/tank_interfaces/: CMakeLists.txt
(+9 files in other folders)
